<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_CreateTableSqlMode" Id="{f7fef60f-5e95-4f20-b390-fca5ee770766}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_CreateTableSqlMode
VAR
(* CRIAR TABELA / CREATE TABLE / CREAR TABLA *)	
	fbCreateTable : FB_SQLMode_ExecuteComandWithoutData ;
	bCreateDatabase : BOOL ;
	bDatabaseCreated : BOOL ;
	sSqlCmdCreateTable : STRING(512) ;
	sError : STRING ;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(***************** CRIAR TABELA / CREATE TABLE / CREAR TABLA **********************)

sSqlCmdCreateTable := 'CREATE TABLE [TB_SQLMODE] ([ID] bigint IDENTITY(1,1), [Timestamp] datetime,
[recipe] varchar(50), [parameter1] float, [parameter2] float, [parameter3] float, [parameter4] float,
[parameter5] float, [parameter6] float)';

fbCreateTable(bExecute:= bCreateDatabase, 
			  hDBID:= 1, 
			  sCommandSql:= sSqlCmdCreateTable, 
			  bCommandOk=> bDatabaseCreated,
			  sError => sError);]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>